--- a/client_frontend/package.json
+++ b/client_frontend/package.json
@@ -2,10 +2,11 @@
   "name": "zepus-admin",
   "version": "1.0.0",
   "description": "ZEPUS Clinics Admin Frontend",
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "node node_modules/vite/bin/vite.js",
+    "build": "node node_modules/vite/bin/vite.js build",
+    "preview": "node node_modules/vite/bin/vite.js preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
