--- a/client_frontend/package.json
+++ b/client_frontend/package.json
@@ -35,5 +35,10 @@
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
     "vite": "^5.2.0"
-  }
+  },
+  "engines": {
+  "node": "18.x",
+  "npm": "9.x"
+}
+
 }
