--- a/client_frontend/package.json
+++ b/client_frontend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "zepus-admin",
+  "name": "zepus-client",
   "version": "1.0.0",
-  "description": "ZEPUS Clinics Admin Frontend",
+  "description": "ZEPUS Clinics Client Frontend",
   "type": "module",
   "scripts": {
-    "dev": "node node_modules/vite/bin/vite.js",
-    "build": "node node_modules/vite/bin/vite.js build",
-    "preview": "node node_modules/vite/bin/vite.js preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -34,11 +34,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
-    "vite": "^5.2.0"
+    "vite": "^5.4.19"
   },
   "engines": {
-  "node": "18.x",
-  "npm": "9.x"
-}
-
+    "node": "18.x",
+    "npm": "9.x"
+  }
 }
